--- a/index.html
+++ b/index.html
@@ -1,28 +1,4 @@
-[23:09, 15.02.2026] Msc: <!DOCTYPE html>
-<html lang="tr">
-<head>
-<meta charset="UTF-8">
-<title>Araç Analiz Sistemi</title>
-<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
-
-<style>
-body{font-family:Arial;background:linear-gradient(135deg,#0a3cff,#0ad0ff);color:white;text-align:center}
-.box{background:white;color:black;width:420px;margin:20px auto;padding:20px;border-radius:12px}
-input,select,button{width:100%;padding:10px;margin:6px 0}
-button{background:#0a3cff;color:white;border:none;cursor:pointer}
-.hidden{display:none}
-img{width:100%;margin-top:10px;border-radius:8px}
-</style>
-</head>
-
-<body>
-
-<h1>Araç Analiz Sistemi</h1>
-
-<div class="box" id="authBox">
-<h3>Kayı…
-[23:54, 15.02.2026] Msc: <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="tr">
 <head>
 <meta charset="UTF-8">
